# airconcierge

./: .gitignore  README.md
acagent/: .bedrock_agentcore.yaml  .gitignore  README.md  pyproject.toml
acagent/cdk/: cdk.json  package-lock.json  package.json
acagent/cdk/lib/: types.ts
acagent/cdk/lib/stacks/: agentcore-stack.ts  docker-image-stack.ts  frontend-stack.ts  index.ts
acagent/src/: main.py  sysprompts.py
acagent/src/hooks/: hooks.py
acagent/src/mcp_client/: client.py
acmcp/: .dockerignore  Dockerfile  auth.py  main.py  pyproject.toml
acmcp/prompts/: attractionsPrompt.py  promptRegistrar.py
acmcp/resources/: fieldMasks.py  resourceRegistrar.py
acmcp/tools/: placeInfo.py  searchAttractions.py  searchFlights.py  searchHotels.py  searchNearby.py  searchPlaces.py  toolRegistrar.py
acmcp/utils/: auth.py  place.py
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/compnents/: Chat.tsx  Chatsidebar.tsx  Chatwrapper.tsx
