[project]
name = "acmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-maps-places>=0.7.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
]
